--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -160,7 +160,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/save_task"
+        android:id="@+id/save_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/save_task" />
