--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -36,8 +36,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
-            android:gravity="end"
             android:autofillHints="text"
+            android:gravity="end"
             android:hint="@string/input_task_name"
             android:inputType="text"
             android:maxLines="1"
@@ -86,18 +86,18 @@
             android:layout_weight="6"
             android:fontFamily="monospace"
             android:gravity="center_vertical"
-            android:text="@string/start_time"
+            android:text="@string/time_from"
             android:textSize="25sp" />
 
         <EditText
-            android:id="@+id/start_time_edit"
+            android:id="@+id/time_from_edit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:autofillHints="time"
             android:focusableInTouchMode="false"
             android:gravity="end"
-            android:hint="@string/choose_start_time"
+            android:hint="@string/choose_time_from"
             android:inputType="time"
             android:textSize="20sp" />
     </LinearLayout>
@@ -115,18 +115,18 @@
             android:layout_weight="6"
             android:fontFamily="monospace"
             android:gravity="center_vertical"
-            android:text="@string/end_time"
+            android:text="@string/time_to"
             android:textSize="25sp" />
 
         <EditText
-            android:id="@+id/end_time_edit"
+            android:id="@+id/time_to_edit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:autofillHints="time"
             android:focusableInTouchMode="false"
             android:gravity="end"
-            android:hint="@string/choose_end_time"
+            android:hint="@string/choose_time_from"
             android:inputType="time"
             android:textSize="20sp" />
     </LinearLayout>
