--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -66,6 +66,7 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:autofillHints="date"
+            android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="end"
             android:hint="@string/choose_date"
@@ -95,6 +96,7 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:autofillHints="time"
+            android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="end"
             android:hint="@string/choose_time_from"
@@ -124,6 +126,7 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:autofillHints="time"
+            android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="end"
             android:hint="@string/choose_time_from"
@@ -136,12 +139,11 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="8dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="monospace"
             android:gravity="center_vertical"
             android:text="@string/task_description"
@@ -149,13 +151,14 @@
 
         <EditText
             android:id="@+id/description_edit"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:autofillHints="text"
-            android:gravity="end"
+            android:gravity="start"
             android:hint="@string/input_description"
-            android:inputType="text"
+            android:inputType="textMultiLine|text"
+            android:maxLines="4"
+            android:singleLine="false"
             android:textSize="20sp" />
     </LinearLayout>
 
